# Essay_Bulldozer

./: README.md  pyproject.toml  requirements.txt
example/: smolagents_test.py
examples/: run_analysis.py
src/: agent.py  openai_client.py  paper_processor.py  utils.py
